ik kan niet spellen

--- a/PVB Stage Applicatie/Views/Formulier/StudentIndex.cshtml
+++ b/PVB Stage Applicatie/Views/Formulier/StudentIndex.cshtml
@@ -62,7 +62,7 @@
 <div class="col-sm-4">
     <div class="panel panel-default">
         <div class="panel-heading">
-            <h3>Tussentijdse Beëindiging</h3>
+            <h3>Tussentijdse Beëeindiging</h3>
         </div>
         <div class="panel-body">
             <div class="col-md-12">
