--- a/PVB Stage Applicatie/Views/Begeleider/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Create.cshtml
@@ -22,7 +22,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Voornaam)
-            @Html.ValidationMessageFor(model => model.Voornaam)
+           </td><td>@Html.ValidationMessageFor(model=> model.Voornaam)
         </div>
 
         <div class="editor-label">
@@ -30,7 +30,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Achternaam)
-            @Html.ValidationMessageFor(model => model.Achternaam)
+           </td><td>@Html.ValidationMessageFor(model=> model.Achternaam)
         </div>
 
         <div class="editor-label">
@@ -38,7 +38,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Tussenvoegsel)
-            @Html.ValidationMessageFor(model => model.Tussenvoegsel)
+           </td><td>@Html.ValidationMessageFor(model=> model.Tussenvoegsel)
         </div>
 
         <div class="editor-label">
@@ -46,7 +46,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
+           </td><td>@Html.ValidationMessageFor(model=> model.Email)
         </div>
 
         <div class="editor-label">
@@ -54,7 +54,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Straat)
-            @Html.ValidationMessageFor(model => model.Straat)
+           </td><td>@Html.ValidationMessageFor(model=> model.Straat)
         </div>
 
         <div class="editor-label">
@@ -62,7 +62,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Huisnummer)
-            @Html.ValidationMessageFor(model => model.Huisnummer)
+           </td><td>@Html.ValidationMessageFor(model=> model.Huisnummer)
         </div>
 
         <div class="editor-label">
@@ -70,7 +70,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Toevoeging)
-            @Html.ValidationMessageFor(model => model.Toevoeging)
+           </td><td>@Html.ValidationMessageFor(model=> model.Toevoeging)
         </div>
 
         <div class="editor-label">
@@ -78,7 +78,7 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Postcode)
-            @Html.ValidationMessageFor(model => model.Postcode)
+           </td><td>@Html.ValidationMessageFor(model=> model.Postcode)
         </div>
 
         <div class="editor-label">
@@ -86,14 +86,14 @@
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.Plaats)
-            @Html.ValidationMessageFor(model => model.Plaats)
+           </td><td>@Html.ValidationMessageFor(model=> model.Plaats)
         </div>
         <div class="editor-label">
             @Html.LabelFor(model => model.Bedrijf, "Bedrijf1")
         </div>
         <div class="editor-field">
             @Html.DropDownList("Bedrijf", String.Empty)
-            @Html.ValidationMessageFor(model => model.Bedrijf)
+           </td><td>@Html.ValidationMessageFor(model=> model.Bedrijf)
         </div>
 
         <p>
