--- a/PVB Stage Applicatie/Views/Docent/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Details.cshtml
@@ -9,7 +9,7 @@
     </li>
 }
     <li>
-        @Html.ActionLink("Aanpassen", "Edit", new { id = Model.PersoonsgegevensID })
+        @Html.ActionLink("Bewerken", "Edit", new { id = Model.PersoonsgegevensID })
     </li>
 
 }
