--- a/PVB Stage Applicatie/Views/Docent/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Edit.cshtml
@@ -157,7 +157,7 @@
     </tr>
                     <tr>
                         <td>
-                            <input type="submit" value="Save" />
+                            <input type="submit" class="btn btn-lg btn-default" value="Save" />
                         </td>
                         <td>@Html.Encode(ViewData["Foutmelding"])</td>
                     </tr>
