--- a/PVB Stage Applicatie/Views/Docent/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Docent/Index.cshtml
@@ -56,8 +56,8 @@
                         </td>
 
                         <td>
-                            @Html.ActionLink("Edit", "Edit", new { id = item.PersoonsgegevensID }) |
-                            @Html.ActionLink("Details", "Details", new { id = item.PersoonsgegevensID })
+                            @Html.ActionLink("Bewerken", "Edit", new { id = item.PersoonsgegevensID }, new { @class = "btn btn-xs btn-info" })
+                            @Html.ActionLink("Details", "Details", new { id = item.PersoonsgegevensID }, new { @class = "btn btn-xs btn-info" })
                         </td>
                     </tr>
                 }
