--- a/PVB Stage Applicatie/Content/Site.css
+++ b/PVB Stage Applicatie/Content/Site.css
@@ -28,13 +28,19 @@ legend {
 }*/
 
 .editor-label {
+    width:25% !important;
     margin: 1em 0 0 0;
 }
 
 .editor-field {
+    width:50% !important;
     margin: 0.5em 0 0 0;
 }
 
+.validator-field{
+    width:25% !important;
+
+}
 
 
 
