--- a/PVB Stage Applicatie/Views/Bedrijf/BulkInvoerBedrijf.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/BulkInvoerBedrijf.cshtml
@@ -1,17 +1,43 @@
 ﻿@{
     ViewBag.Title = "Bulk Invoer Bedrijf";
 }
-    @section zijMenu{
-            <li>@Html.ActionLink("Terug", "index")</li>
-            <li>
-@Html.ActionLink("Download Template", "Download", "Bedrijf")
-            </li>
-    }
-<h2>Bulk Invoer Bedrijf</h2>
-@using (Html.BeginForm("BulkInvoer", "Bedrijf", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    <input type="file" name="file" />
-    <input type="submit" value="OK" />
+@section zijMenu{
+    <li>@Html.ActionLink("Terug", "index")</li>
+    <li>
+        @Html.ActionLink("Download Template", "Download", "Bedrijf")
+    </li>
 }
-<p>@Html.Encode(ViewData["Feedback"])</p>
 
+
+
+
+<div class="col-sm-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>
+                Bulk Invoer Bedrijf
+            </h3>
+        </div>
+        <div class="panel-body">
+
+            <table class="table table-condensed">
+                @using (Html.BeginForm("BulkInvoer", "Bedrijf", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    <tr>
+                        <td><input type="file" name="file" /></td>
+                    </tr>
+                    <tr>
+                        <td><input class="btn btn-lg btn-default" type="submit" value="OK" /></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>@Html.Encode(ViewData["Feedback"])</p>
+
+                        </td>
+                    </tr>
+
+                }
+            </table>
+        </div>
+    </div>
+</div>
