--- a/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Index.cshtml
@@ -37,24 +37,6 @@
                     <th>
                         @Html.DisplayNameFor(model => model.Plaats)
                     </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Straatnaam)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Huisnummer)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Toevoeging)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Postcode)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Telefoonnummer)
-                    </th>
-                    <th>
-                        @Html.DisplayNameFor(model => model.Email)
-                    </th>
                     <th></th>
                 </tr>
 
@@ -77,27 +59,9 @@
                             @Html.DisplayFor(modelItem => item.Plaats)
                         </td>
                         <td>
-                            @Html.DisplayFor(modelItem => item.Straatnaam)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Huisnummer)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Toevoeging)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Postcode)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Telefoonnummer)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.Email)
-                        </td>
-                        <td>
                             @if (User.IsInRole("Beheerder"))
                             {
-                                @Html.ActionLink("Edit", "Edit", new { id = item.BedrijfID }, new { @class = "btn btn-xs btn-info" })
+                                @Html.ActionLink("Bewerken", "Edit", new { id = item.BedrijfID }, new { @class = "btn btn-xs btn-info" })
                             }
                         </td>
                     </tr>
