--- a/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
@@ -30,131 +30,194 @@
 </script>
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Bewerken";
 }
 
-<h2>Edit</h2>
-
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Persoonsgegevens</legend>
-
-        @Html.HiddenFor(model => model.PersoonsgegevensID)
-        @Html.HiddenFor(model => model.Voornaam)
-        @Html.HiddenFor(model => model.Achternaam)
-        @Html.HiddenFor(model => model.Tussenvoegsel)
-        @Html.HiddenFor(model => model.Rol)
 
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Voornaam)
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>
+                Bewerken
+            </h3>
         </div>
-        <div class="editor-field">
-            @Html.DisplayFor(model => model.Voornaam)
-            @Html.ValidationMessageFor(model => model.Voornaam)
-        </div>
+        <div class="panel-body">
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Achternaam)
-        </div>
-        <div class="editor-field">
-            @Html.DisplayFor(model => model.Achternaam)
-            @Html.ValidationMessageFor(model => model.Achternaam)
-        </div>
+            <div class="col-md-12">
+                <table class="table table-striped">
+                    @Html.HiddenFor(model => model.PersoonsgegevensID)
+                    @Html.HiddenFor(model => model.Voornaam)
+                    @Html.HiddenFor(model => model.Achternaam)
+                    @Html.HiddenFor(model => model.Tussenvoegsel)
+                    @Html.HiddenFor(model => model.Rol)
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Tussenvoegsel)
-        </div>
-        <div class="editor-field">
-            @Html.DisplayFor(model => model.Tussenvoegsel)
-            @Html.ValidationMessageFor(model => model.Tussenvoegsel)
-        </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Voornaam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.DisplayFor(model => model.Voornaam)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Voornaam)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Straat)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Straat)
-            @Html.ValidationMessageFor(model => model.Straat)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Achternaam)
+                        </td>
+                        <td class="editor-field">
+                            @Html.DisplayFor(model => model.Achternaam)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Achternaam)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Huisnummer)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Huisnummer)
-            @Html.ValidationMessageFor(model => model.Huisnummer)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Tussenvoegsel)
+                        </td>
+                        <td class="editor-field">
+                            @Html.DisplayFor(model => model.Tussenvoegsel)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Tussenvoegsel)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Toevoeging)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Toevoeging)
-            @Html.ValidationMessageFor(model => model.Toevoeging)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Email)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Email)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Email)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Postcode)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Postcode)
-            @Html.ValidationMessageFor(model => model.Postcode)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Straat)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Straat)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Straat)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Plaats)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Plaats)
-            @Html.ValidationMessageFor(model => model.Plaats)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Huisnummer)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Huisnummer)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Huisnummer)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Actief)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Actief)
-            @Html.ValidationMessageFor(model => model.Actief)
-        </div>
-        <div class="editor-label">
-            @Html.LabelFor(model => model.NonActiefReden)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.NonActiefReden)
-            @Html.ValidationMessageFor(model => model.NonActiefReden)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Toevoeging)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Toevoeging)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Toevoeging)
+                        </td>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Bedrijf, "Bedrijf1")
-        </div>
-        <div class="editor-field">
-            @Html.DropDownList("Bedrijf", String.Empty)
-            @Html.ValidationMessageFor(model => model.Bedrijf)
-        </div>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Postcode)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Postcode)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Postcode)
+                        </td>
 
-        <p>
-            <input type="submit" value="Save" />
-        </p>
-        <p>@Html.Encode(ViewData["Foutmelding"])</p>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Plaats)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Plaats)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Plaats)
+                        </td>
 
-    </fieldset>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Actief)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.Actief)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Actief)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.NonActiefReden)
+                        </td>
+                        <td class="editor-field">
+                            @Html.EditorFor(model => model.NonActiefReden)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.NonActiefReden)
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td class="editor-label">
+                            @Html.LabelFor(model => model.Bedrijf, "Bedrijf1")
+                        </td>
+                        <td class="editor-field">
+                            @Html.DropDownList("Bedrijf", String.Empty)
+                        </td>
+                        <td>
+                            @Html.ValidationMessageFor(model => model.Bedrijf)
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <input type="submit"
+                                   class="btn btn-lg btn-default"
+                                   value="Save" />
+                        </td>
+                        <td colspan="2">@Html.Encode(ViewData["Foutmelding"])</td>
+                    </tr>
+                </table>
+            </div>
+        </div>
+    </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
+@section zijMenu{
+    <li>
+        @Html.ActionLink("Back to List", "Index")
+    </li>
+}
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
