--- a/PVB Stage Applicatie/Views/Stagiair/BulkInvoerStagiair.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/BulkInvoerStagiair.cshtml
@@ -4,31 +4,71 @@
     ViewBag.Title = "Bulk Invoer Stagiair";
 }
 @section zijMenu{
-        <li>@Html.ActionLink("Terug", "index")</li>
-        <li>
-            @Html.ActionLink("Download Template invoer", "downloadStagiair", "Stagiair")
-        </li>
-        <li>
-            @Html.ActionLink("Download Template non-actief", "downloadNonActief", "Stagiair")
-        </li>
+    <li>@Html.ActionLink("Terug", "index")</li>
+    <li>
+        @Html.ActionLink("Download Template invoer", "downloadStagiair", "Stagiair")
+    </li>
+    <li>
+        @Html.ActionLink("Download Template non-actief", "downloadNonActief", "Stagiair")
+    </li>
 }
 
-<h2>Bulk invoeren stagiaires</h2>
-@using (Html.BeginForm("BulkInvoer", "Stagiair", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    <input type="file" name="file" />
-    <input type="submit" value="OK" />
-}  
+<div class="col-sm-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Bulk invoeren stagiaires</h3>
+        </div>
+        <div class="panel-body">
 
+            <table class="table table-condensed">
 
-<p>@Html.Encode(ViewData["FeedbackInvoer"])</p>
+                @using (Html.BeginForm("BulkInvoer", "Stagiair", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    <tr>
+                        <td><input type="file" name="file" /></td>
+                    </tr>
+                    <tr>
+                        <td><input class="btn btn-lg btn-default" type="submit" value="OK" /></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>@Html.Encode(ViewData["FeedbackInvoer"])</p>
+                        </td>
+                    </tr>
 
-<h2>Bulk non-actief stellen</h2>
+                }
+            </table>
+        </div>
+    </div>
+</div>
+</div>
 
-@using (Html.BeginForm("BulkNonActief", "Stagiair", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    <input type="file" name="file" />
-    <input type="submit" value="OK" />
-}  
+<div class="col-sm-6">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h3>Bulk non-actief stellen</h3>
+        </div>
+        <div class="panel-body">
 
-<p>@Html.Encode(ViewData["FeedbackNonActief"])</p>
+            <table class="table table-condensed">
+
+                @using (Html.BeginForm("BulkNonActief", "Stagiair", FormMethod.Post, new { enctype = "multipart/form-data" }))
+                {
+                    <tr>
+                        <td><input type="file" name="file" /></td>
+                    </tr>
+                    <tr>
+                        <td><input class ="btn btn-lg btn-default" type="submit" value="OK" /></td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>@Html.Encode(ViewData["FeedbackNonActief"])</p>
+                        </td>
+                    </tr>
+
+                }
+            </table>
+        </div>
+    </div>
+    </div>
+</div>
