--- a/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Details.cshtml
@@ -9,26 +9,20 @@
 
     @if (User.IsInRole("Beheerder"))
     {
-        <li>@Html.ActionLink("Edit", "Edit", new { id = Model.PersoonsgegevensID }) </li>
+        <li>@Html.ActionLink("Aanpassen", "Edit", new { id = Model.PersoonsgegevensID }) </li>
     }
 }
 
 
 <div class="panel panel-default">
     <div class="panel-heading">
-        <h3>Medewerkers</h3>
+        <h3>Stagiair details</h3>
 
     </div>
     <div class="panel-body">
         <div class="col-md-12">
             <table class="table table-striped">
                 <tr>
-                <td class="display-label">
-                    @Html.DisplayNameFor(model => model.Rol)
-                </td>
-                <td class="display-field">
-                    @Html.DisplayFor(model => model.Rol)
-                </td>
                 </tr>
                 <tr>
                     <td class="display-label">
