--- a/PVB Stage Applicatie/Views/Stagiair/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Stagiair/Edit.cshtml
@@ -48,7 +48,7 @@
                         <td class="editor-label">
                             @Html.LabelFor(model => model.Voornaam)
                         </td>
-                        <td class="editor-field">
+                        <td class="editor-field" colspan="2">
                             @Html.DisplayFor(model => model.Voornaam)
                             @Html.HiddenFor(model => model.Voornaam)
                         </td>
@@ -57,7 +57,7 @@
                         <td class="editor-label">
                             @Html.LabelFor(model => model.Achternaam)
                         </td>
-                        <td class="editor-field">
+                        <td class="editor-field" colspan="2">
                             @Html.DisplayFor(model => model.Achternaam)
                             @Html.HiddenFor(model => model.Achternaam)
                         </td>
@@ -66,7 +66,7 @@
                         <td class="editor-label">
                             @Html.LabelFor(model => model.Tussenvoegsel)
                         </td>
-                        <td class="editor-field">
+                        <td class="editor-field" colspan="2">
                             @Html.DisplayFor(model => model.Tussenvoegsel)
                             @Html.HiddenFor(model => model.Tussenvoegsel)
                         </td>
@@ -77,7 +77,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Email)
-                            @Html.ValidationMessageFor(model => model.Email)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Email)
                         </td>
                     </tr>
                     <tr>
@@ -86,7 +86,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Straat)
-                            @Html.ValidationMessageFor(model => model.Straat)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Straat)
                         </td>
                     </tr>
                     <tr>
@@ -95,7 +95,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Huisnummer)
-                            @Html.ValidationMessageFor(model => model.Huisnummer)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Huisnummer)
                         </td>
                     </tr>
                     <tr>
@@ -104,7 +104,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Toevoeging)
-                            @Html.ValidationMessageFor(model => model.Toevoeging)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Toevoeging)
                         </td>
                     </tr>
                     <tr>
@@ -113,7 +113,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Postcode)
-                            @Html.ValidationMessageFor(model => model.Postcode)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Postcode)
                         </td>
                     </tr>
                     <tr>
@@ -122,7 +122,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Plaats)
-                            @Html.ValidationMessageFor(model => model.Plaats)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Plaats)
                         </td>
                     </tr>
                     <tr>
@@ -131,7 +131,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Actief)
-                            @Html.ValidationMessageFor(model => model.Actief)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Actief)
                         </td>
                     </tr>
                     <tr>
@@ -140,7 +140,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.NonActiefReden)
-                            @Html.ValidationMessageFor(model => model.NonActiefReden)
+                           </td><td>@Html.ValidationMessageFor(model=> model.NonActiefReden)
                         </td>
                     </tr>
                     <tr>
@@ -149,7 +149,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.DisplayFor(model => model.StudentNummer)
-                            @Html.ValidationMessageFor(model => model.StudentNummer)
+                           </td><td>@Html.ValidationMessageFor(model=> model.StudentNummer)
                         </td>
                     </tr>
                     <tr>
@@ -158,7 +158,7 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Opleiding)
-                            @Html.ValidationMessageFor(model => model.Opleiding)
+                           </td><td>@Html.ValidationMessageFor(model=> model.Opleiding)
                         </td>
                     </tr>
                     <tr>
@@ -167,13 +167,15 @@
                         </td>
                         <td class="editor-field">
                             @Html.EditorFor(model => model.Opleidingsniveau)
-                            @Html.ValidationMessageFor(model => model.Opleidingsniveau)
+                           </td>
+                        <td>
+                            @Html.ValidationMessageFor(model=> model.Opleidingsniveau)
                         </td>
                     </tr>
                     <tr>
-                        <td>
+                        <td colspan="2" >
                             <input type="submit" class="btn btn-lg btn-default" value="Opslaan" />
-                            
+
                         </td>
                         <td>@Html.Encode(ViewData["Foutmelding"])</td>
                     </tr>
