--- a/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Bedrijf/Edit.cshtml
@@ -143,6 +143,9 @@
                         <td colspan="2">
                             <input type="submit" class="btn btn-lg btn-default" value="Opslaan" />
                         </td>
+                        <td>
+                            @Html.Encode(ViewData["Foutmelding"])
+                        </td>
                     </tr>
 
                 </table>
