Dubbele stage afgevangen

--- a/PVB Stage Applicatie/Views/Koppeling/Create.cshtml
+++ b/PVB Stage Applicatie/Views/Koppeling/Create.cshtml
@@ -51,6 +51,7 @@
 
         <p>
             <input type="submit" value="Create" />
+            @Html.Encode(ViewData["Foutmelding"])
         </p>
     </fieldset>
 }
