--- a/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
+++ b/PVB Stage Applicatie/Views/Begeleider/Edit.cshtml
@@ -201,8 +201,7 @@
                     </tr>
                     <tr>
                         <td>
-                            <input type="submit"
-                                   class="btn btn-lg btn-default"
+                            <input type="submit" class="btn btn-lg btn-default"
                                    value="Save" />
                         </td>
                         <td colspan="2">@Html.Encode(ViewData["Foutmelding"])</td>
